# geom_matching

./: .gitignore  README
wasserstein/: CMakeLists.txt  README  license.txt  pd1.txt
wasserstein/example/: wasserstein_dist.cpp
wasserstein/include/: auction_oracle.h  auction_runner.h  basic_defs.h  wasserstein.h
wasserstein/src/: auction_oracle.cpp  basic_defs.cpp  basic_defs.h  def_debug.h  main.cpp  wasserstein.cpp  wasserstein.h
wasserstein/src/include/dnn/geometry/: euclidean-fixed.h
wasserstein/src/include/dnn/local/: kd-tree.hpp
